2015-12-03 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/internals.xml: explaining the MPM bridge jump table
    * doc/rivet.css: changing colors adopting 2.3 style temporarily
    * doc/images: new images with new colors
    * doc/xml/intro.xml,install.xml: removing reference no longer
    valid for version 3.0
    * packages/hexglyphs/hexglyphs.tcl: new glyphs for more punctuation
    characters

2015-11-27 Massimo Manghi <mxmanghi@apache.org>
    * VERSION,configure.ac: Major version number increased to 3.0.0

2015-11-25 Massimo Manghi <mxmanghi@apache.org>
    * src/rivet.h: defined RIVET_CMD_EXPORT as wrapper to Tcl_Export
    * tests/bailout.test: redirect.test renamed as bailout.test. It's meant
    to gather all the tests concerning exceptions like abort_page and ::rivet::exit
    * src/librivet/rivet[Crypt|WWW|List].c: command export mechanism changed
    as we are now explicitly exporting commands
    * rivet/rivet-tcl/catch.tcl: new (non-exported) command ::rivet::catch
    * rivet/init.tcl[.in]: command export mechanics changed
    * src/mod_rivet/rivetCore.c: command export made explicit through RIVET_CMD_EXPORT.
    Abort page command now handling also [::rivet::abort_page -exiting] test

2015-10-27 Massimo Manghi <mxmanghi@apache.org>
    * rivet/init.tcl.in: actually was this file that had to be changed

2015-10-22 Massimo Manghi <mxmanghi@apache.org>
    * rivet/init.tcl: now renaming the [exit] core command into ::Rivet::tclcore_exit
    and replacing with a Tcl scripts that calls ::rivet::thread_exit
    * rivet/packages/hexglyphs/hexglyphs.tcl: package generating ASCII 
    glyphs of hexadecimal characters and punctuation character : and -

2015-10-18 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/rivet_worker_mpm.c: returning HTTP_INTERNAL_SERVER_ERROR
    to requests coming in during a process shutdown. This is required
    by the exit command handling
    * src/mod_rivet/mod_rivet.c: changed some log message calls