@@ -29,3 +29,4 @@ set auto_index(::rivet::http_accept) [list source [file join $dir http_accept.tc
 set auto_index(::rivet::xml) [list source [file join $dir xml.tcl]]
 set auto_index(::rivet::redirect) [list source [file join $dir redirect.tcl]]
 set auto_index(::rivet::catch) [list source [file join $dir catch.tcl]]
+set auto_index(::rivet::try) [list source [file join $dir try.tcl]]
